--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -212,9 +212,9 @@ The group planning process improved, and the self-organisational abilities of pa
 <!-- A starting toolset was needed to start this process.  It should rather than  inventing a simplified code language or inauthentic novice oriented tool,  -->
 On completion of P1, I reflected on the design challenge involved to address several areas contradictions that had emerged in my journal observations and participant feedback.
 
-The overall learning design should maintain  positive affect towards to the object being worked on but engage in hands-on coding using authentic tools early in the process to avoid unlrealistic expectations. The template should help novices with embedding affordances which helped participants build code familiarity without needing explicit instruction. Supporting documentation was needed but should not interfere with the flow of participants experience. Finally, the overall learning design should encourage appropriate social learning, peer support and relfective practices but again without overly complicating the object of actitivty or interupting the flow participant making.
+The overall learning design should maintain  positive affect towards to the object being worked on but engage in hands-on coding using authentic tools early in the process to avoid unrealistic expectations. The template should help novices with embedding affordances which helped participants build code familiarity without needing explicit instruction. Supporting documentation was needed but should not interfere with the flow of participants experience. Finally, the overall learning design should encourage appropriate social learning, peer support and reflective practices but again without overly complicating the object of activity or interrupting the flow participant making.
 
-Three sections of this chapter describe different facets of these contraditions and interventions to address them. This, the first, tackles key transformations in use of primary tools, those used to directly achieve the task. The second addresses the area of help resources, documentation. Finally other support process to support emerging social coding processes are examined.
+Three sections of this chapter describe different facets of these contradictions and interventions to address them. This, the first, tackles key transformations in use of primary tools, those used to directly achieve the task. The second addresses the area of help resources, documentation. Finally other support process to support emerging social coding processes are examined.
 
 <!-- This challenge was brought sharply into focus by a particular conflict experienced by one family in particular. -->
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
@@ -244,23 +244,9 @@ In D1 I proactively reached out to Mozilla to ask about the future of Thimple, m
 
 As I moved to Glitch.com I also redesigned the starting code template of a game of the  _platformer_ genre (see glossary). To do this a draw on three online tutorials site and made key changes to make the code more readable to novices, and the structure easier to patch code snippts. The design decisions driving this process is outlined in Appendix 5.tech. The choice to pre-select a particular genre was a pragmatic response to tensions of being overwhelmed by help requests and thus narrowing the range of game features that would be requested. Additionally, to encourage  playful, hands-on experimentation in early stages, a working game template rather purely structural template would be optimal.
 
-UP TO HERE 
+UP TO HERE
 
-By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game.
-
-In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
-
-
-<!-- The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset. -->
-
-
-
-
-
-**Structural design of the game template**
-
-A web code project using the chosen game framework
-phaser consists of several interlinked files of Javascript, HTML and CSS and image files. (see glossary & appendix 4.x)
+I draw on a tactic I had used in previous novice coding projects [@chesterman_webmaking_2015], of highlighting to learner easy code changes which would have a large impact on the end project, and which ideally they would be motivated to undertake. Thus for the P2 starting template, when learners tried to play the starting platformer template game, I intentionally set gravity and jump variables so they were able to jump over a hazard but unable to jump up onto the first platform. At this stage, players needed to click a remix button, and alter the underlying code to progress in the game. Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review, in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. This rapid transition from the _use_ to _modify_ stages forced at an early stage, allows a careful scaffolding of early coding experiences designed to help overcome negative affect towards text code. The shared underlying game structure limits initial user choice over game genre and design, it also promotes a shared experience for all participants in a way which facilitates and encourages peer learning. This initial change and the alignment with UMC and half-baked design approaches, drove me to select other key affordances in the form of simple code changes which I explore after a summary of the structural design of the game template.
 
 <!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
 <!--
@@ -268,7 +254,12 @@ phaser consists of several interlinked files of Javascript, HTML and CSS and ima
 
 ![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
 
-4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
+Figure 5.code glitch coding environment
+
+Figure 5.code outlines a typical early view of the starting code project. The project consists of several interlinked files code and asset files (see glossary & appendix 5.tech). The typical view of Glitch.com project that learners interacted with had three main menus. First on the left options to change project settings, an assets link to  manage image and audio files and list of project files listing JavaScript, HTML, css. Second a central code window with code, comments. Thirdly a game preview on the right where changes to the code were immediately updated in the resulting game project.
+
+REPLACE WITH A, B AND C AND ADD TO DIAGRAM?
+The main
 
 1. Javascript file which participants alter to make changes to their game
 2. Html page within which the game is embeded (not usually altered by participants)
@@ -278,6 +269,7 @@ phaser consists of several interlinked files of Javascript, HTML and CSS and ima
 
 While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
 
+It is of value to restate the positive impact of key design features here which align with extensive constructionist research creating simplified coding environments for novices. Immediate feedback, structured support in managing asset files, the online nature of projects allowing immediate peer testing.
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
 
@@ -969,3 +961,10 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
 <!-- As preparation for the sessions I had followed the tutorial. When the  and adapted it. I removed out as much code as possible and thus simplifying the structure and readability.
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
  -->
+
+
+ #### Dropped from c1
+
+ After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others,  were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+
+ Data explored in the next chapter supports foundational claims of constructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
