edits up to game assets

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -244,9 +244,7 @@ In D1 I proactively reached out to Mozilla to ask about the future of Thimple, m
 
 As I moved to Glitch.com I also redesigned the starting code template of a game of the  _platformer_ genre (see glossary). To do this a draw on three online tutorials site and made key changes to make the code more readable to novices, and the structure easier to patch code snippts. The design decisions driving this process is outlined in Appendix 5.tech. The choice to pre-select a particular genre was a pragmatic response to tensions of being overwhelmed by help requests and thus narrowing the range of game features that would be requested. Additionally, to encourage  playful, hands-on experimentation in early stages, a working game template rather purely structural template would be optimal.
 
-UP TO HERE
-
-I draw on a tactic I had used in previous novice coding projects [@chesterman_webmaking_2015], of highlighting to learner easy code changes which would have a large impact on the end project, and which ideally they would be motivated to undertake. Thus for the P2 starting template, when learners tried to play the starting platformer template game, I intentionally set gravity and jump variables so they were able to jump over a hazard but unable to jump up onto the first platform. At this stage, players needed to click a remix button, and alter the underlying code to progress in the game. Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review, in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. This rapid transition from the _use_ to _modify_ stages forced at an early stage, allows a careful scaffolding of early coding experiences designed to help overcome negative affect towards text code. The shared underlying game structure limits initial user choice over game genre and design, it also promotes a shared experience for all participants in a way which facilitates and encourages peer learning. This initial change and the alignment with UMC and half-baked design approaches, drove me to select other key affordances in the form of simple code changes which I explore after a summary of the structural design of the game template.
+I draw on a tactic I had used in previous novice coding projects [@chesterman_webmaking_2015], of highlighting to learner easy code changes which would have a large impact on the end project, and which ideally they would be motivated to undertake. Thus for the P2 starting template, when learners tried to play the starting platformer template game, I intentionally set gravity and jump variables so they were able to jump over a hazard but unable to jump up onto the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure 5.code below). Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review [@lee_computational_2011], in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. This rapid transition from the _use_ to _modify_ stages forced at an early stage, allows a careful scaffolding of early coding experiences designed to help overcome negative affect towards text code. The shared underlying game structure limits initial user choice over game genre and design, it also promotes a shared experience for all participants in a way which facilitates and encourages peer learning. This initial change and the alignment with UMC and half-baked design approaches, drove me to select other key affordances in the form of simple code changes which I explore after a summary of the structural design of the game template.
 
 <!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
 <!--
@@ -269,105 +267,44 @@ The main
 
 While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
 
+IS IT? OR MOVE
 It is of value to restate the positive impact of key design features here which align with extensive constructionist research creating simplified coding environments for novices. Immediate feedback, structured support in managing asset files, the online nature of projects allowing immediate peer testing.
 
-<!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
-
-<!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
-
-<!-- NOTE SOME OF THIS CAN  -->
-<!-- I kept the process informal and responsive by allowing participants to choose which one they wanted to work on next. The following sections outline different areas and patterns of activity. -->
-
-<!-- COMMENT OF mOZILLA TOD THAT IT WAS GENTLE FACILITATION -->
+<!-- #### Creating key affordances -->
 
 <!-- - level design and prototyping: use of
 - fluid variable editing effective movement
 - The swapping of assets and more complex work with code syntax
 - development of simple stories to bump personal expression and narrative -->
 
-<!-- NOTE - All longer or shorter chains of actions , becoming operations - WHERE DOES THIS FIT?
-NOTE - Also justify having so emergent results here , delay while accessing help to start 360 recordings
-As the end process is visible in fluid behaviour -->
 
-<!-- These tools align with some key design considerations. [Brennan & Resnick]
-- Well suited to build a repeated design practice.
-- Small changes had big effects.
-- Variable changes needed immediate testing.  
-- Especially with starting documents, -->
-
-<!-- While the design suiThis took the technical form of  a webpage
-ts repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
-A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
-<!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
-
-<!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
--->
-
-#### Creating key affordances
-
-
-**Variable editing for player movement**
-
-To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
-
-The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above).
-
-The process here began with me imagining what would be a good feature that players would notice and be spurred to change. Here, the deliberately unsuitable game variable is a key affordance of this half-baked game template.
-
-Descriptions of other under-developed features inviting improvement follow including level design and the use of minimalistic graphical assets.
-
-<!-- I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.  -->
-
-**Level design and prototyping**
-
-<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
-
-The use of a graphical grid structure to edit level design helped balance concerns of accessibility with the use of authentic code language.
-
-Platform games often conform to certain patterns in terms of the elements involved commonly including: a player that you control to movement of; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
-
-In P1 the suggested process of adding game elements was relatively complex which involved changing parameters of functions to alter to adjust their location. An example of the code needed is included one of my tutorial chapters / appendix 4.x [^7]. Complexities included: each element needs to be added separately with code elements required in three different areas of the code template, adding x,y coordinates to place each game elements was; difficulties concerning adding graphical elements of different sizes. These complexities created frustrations in the game making activity P1, in particular as project became bigger cod became unwieldy and confusing to alter, causing a negative impact on the testing and revision process in particular.    
-
-Key research on toolsets for novice coders advocates a visual approach to facilitate the coding multi-media projects for novices to address such complexities[@guzdial_programming_2004; @resnick_scratch:_2009]. This is achieved via techiqued which include a drag and drop approach in Scratch or via a concept called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (Unity, Game Maker etc).
-
-While, these tenhiques were not possible in this text-based environment, in P2 I revised the added  the possibility for a visual design approach via the use of a a grid coding format (see figure 4.x below), thus  replicating a tilemap technique within the text code format.
-
-<!-- OPTIONAL ADD AND APPENDIX ON LOAD LEVEL? -->
+Returning to the creation of key starting affordances to support the half-baked / UMC approach, the placement of three key variables (changing gravity, altering the player jump height and walking speed) that impacted player movement at the very top of the game.js file accelerated and support the experimentation of users. The process here began with me imagining what would be a good feature that players would notice and be spurred to change. For example an annoying slow horizontal movement speed. Another motivational affordance was the ability to change the platformer level design based on gameplay patterns that appeared familiar to participants presumably due to their prevalence in home game playing: these were specifically; platforms to be jumped on; hazards to be avoided; and rewards to be collected. In P1 the process of adding these game elements was relatively complex involving changing parameters of functions to change asset location, and spiralling code complexity. see Appendix 5.chapter for an example  [^7]. Instead in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid.
 
 ![](./Pictures/grid_editor_1.png){width=95%}
-Figure 4.x - Grid based editing of level design with a simple key for hazards, coins, and platforms.
+Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.
 
-**Black boxing the process of placing assets:**
+Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement and aligns with existing research on toolsets for novice coders advocates a visual approach to facilitate the coding multi-media projects for novices to address such complexities [@guzdial_programming_2004; @resnick_scratch:_2009]. It also mirrors a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (Unity, Game Maker etc).
 
-Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or could be left blank (see Figure 4.x above). The grid structure of text-based array, had a strong visual correlation with the resulting game layout. Changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area.
-
-This solution abstracted away complexity and repetitive nature of asset placement via multiple asset placements  to prioritise ease of use to help sustain participant engagement.
-
-Thus, here a technical approach helped resolve tension between immediacy of feedback and ?
-
-Via quickly adding design possibilities to change levels design.
-
-This adaptation had a positive impact on engagement with level design in initial stages. Many participants spending significant time and effort undertaking many iterations of changes to the level design ((Is this something that can be given figures to? Perhaps for one session?)).  An illustrative example of the impact of
-is explored via a vignette in appendix 4.x where child participant Toby designs many levels. The goal seems to be to make the game challenging and to add many levels as a way of making his game distinct from others (include BETTER SUMMARY). Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in .
+My design aim was to reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety but not to avoid mistakes entirely. Even these small changes involved potential syntax errors, however as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support.
 
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
-EDIT DOWN MOVE LATER DISCUSSION
-The evolution of the starting template aligned with UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
+<!-- OPTIONAL ADD AND APPENDIX ON LOAD LEVEL? -->
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
-##### Use of game assets
+This adaptation is one example of how a technical solution had a positive impact on engagement with game coding and allowed social elements of coding processes to evolve. Many participants spending significant time and effort undertaking many iterations of changes to the level design .  An illustrative example of the impact of is explored via a vignette in appendix 4.x where child participant Toby designs many levels as a way of making his game distinct from others (include BETTER SUMMARY). Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in a following section  - SIGNPOST
+
+The technical changes to the template also made it easier to swap in graphical assets created by participants.
+
+##### Use of game assets - EDIT DOWN 
 
 There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. My observations supported these findings. Indeed, I observed a strong palpable a sense of achievement and satisfaction when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, this sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes. As if they almost couldn't believe they had made an impact on the game world via interaction with such an alien language.
 
 I now outline and discuss the evolution of the use of simple block graphics, the use of pixel art  authoring tool, and wider asset creation approaches.
 
 <!-- EVIDENCE? - code for this? -->
-
 <!-- This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc]. -->
-
 <!-- While the value of this process seems clear from existing research, it presented challenges and design tensions in this learning design. -->
-
-
 
 **Simple block graphics**
 
@@ -724,6 +661,9 @@ The process of modification of the starter template, foregrounding key affordanc
 MOVED INTEGRATE
 While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020].
 
+
+MOVED INTEGRATE
+The evolution of the starting template aligned with UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
 
 Many of the design adaptations described in this chapter align with motivations of constructionist design principles explored in the Literature review [@resnick_design_2005]. Techniques or concepts which are embodied in both the Scratch software and the adaptations to the tool set of this intervention include:
 
