more editing down

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -296,11 +296,12 @@ This adaptation is one example of how a technical solution had a positive impact
 
 The technical changes to the template also made it easier to swap in graphical assets created by participants.
 
-##### Use of game assets - EDIT DOWN 
+##### Use of game assets - EDIT DOWN
 
-There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. My observations supported these findings. Indeed, I observed a strong palpable a sense of achievement and satisfaction when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, this sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes. As if they almost couldn't believe they had made an impact on the game world via interaction with such an alien language.
+My observations in P1 aligned with research on the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. A full table of the tools used and their purposes created to help orientate participants in P1 are outlined in 5.tech. The use of many production processes and asset creation tools in P1 complicated the object of activity in a way which I evaluated as negatively impacting the leading activity and motivation of making a game to share. Thus in P2 I reduced the number of suggested tool address this overcomplication. I now outline and discuss the use of simple block graphics, the use of pixel art authoring tool, and wider asset creation approaches.
 
-I now outline and discuss the evolution of the use of simple block graphics, the use of pixel art  authoring tool, and wider asset creation approaches.
+<!-- My observations supported these findings. Indeed, I observed a strong palpable a sense of achievement and satisfaction when participants succeeded in seeing and hearing their creations in their game after making the final changes in code.
+For some, this sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes. As if they almost couldn't believe they had made an impact on the game world via interaction with such an alien language. -->
 
 <!-- EVIDENCE? - code for this? -->
 <!-- This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc]. -->
@@ -308,7 +309,14 @@ I now outline and discuss the evolution of the use of simple block graphics, the
 
 **Simple block graphics**
 
-In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. In P2 starting graphics consisted of colour blocks. Their size of 32 x 32 corresponded to the default project size of Piskel (the graphical pixel art editor) with an aim to was also design to reduce technical friction. One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of one of the  technical alignments which addressed and helped resolve practical obstacles that participants experienced.
+<!-- In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. -->
+
+In P2 starting template graphics consisted of colour blocks, a design choice aligned with a half-baked game approach inviting learners to develop game characters from a clean slate.  
+
+The size of the colour block in the starter template were  32 x 32 to align with the default project size of Piskel (the graphical pixel art editor) to reduce technical friction when designing and swapping in new graphical resources.  This standardisation also helped resolve a complications encountered in P1 due to differing sizes of sprites created using different graphical tools.  
+
+DROP? I had previously set the dimensions of the matrix above based on this size to create a resulting game size of 550, 400, in line with a retro game style. 
+
 
 The pixel art tool used, Piskel, proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
 
