--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -310,38 +310,28 @@ For some, this sense of a achievement appeared magnified by difficulty caused by
 **Simple block graphics**
 
 <!-- In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. -->
+<!-- The overall simplification reduced and therefore rebalanced time spent on to this activity compared to other game coding processes, thus helping resolve one of the tensions emerging in P1. -->
 
-In P2 starting template graphics consisted of colour blocks, a design choice aligned with a half-baked game approach inviting learners to develop game characters from a clean slate.  
-
-The size of the colour block in the starter template were  32 x 32 to align with the default project size of Piskel (the graphical pixel art editor) to reduce technical friction when designing and swapping in new graphical resources.  This standardisation also helped resolve a complications encountered in P1 due to differing sizes of sprites created using different graphical tools.  
-
-DROP? I had previously set the dimensions of the matrix above based on this size to create a resulting game size of 550, 400, in line with a retro game style. 
-
-
-The pixel art tool used, Piskel, proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
+In P2 starting template graphics consisted of colour blocks, a design choice aligned with a half-baked game approach inviting learners to develop game characters from a clean slate. I prioritised the use of the pixel art tool Piskel, as I evaluated it to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 5.px). The size of the colour block in the starter template were  32 x 32 to align with the default project size of Piskel to reduce technical friction when designing and swapping in new graphical resources. This standardisation also helped resolve a complications encountered in P1 due to differing sizes of sprites created using different graphical tools.
 
 ![](./Pictures/piskel_app_1.png){width=95%}
-Figure 4.x - Interface of Piskelapp tool
+Figure 5.px - Interface of Piskelapp tool
 
-The template's use of minimal starting game assets invited creative addition by participants, again aligned to the half-baked approach. At the same time however, the overall simplification reduced and therefore rebalanced time spent on to this activity compared to other game coding processes, thus helping resolve one of the tensions emerging in P1.
+<!-- DROP shift to appendix? I had previously set the dimensions of the matrix above based on this size to create a resulting game size of 550, 400, in line with a retro game style.  -->
+
+Despite the efforts to simplify the process, the process of swapping in new graphical assets is (outlined in Appendix 5.tech) still required a series of potentially tricky operations.
+
+Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code.
+In terms of audio assets Despite
 
 **Distributed approach to asset creation**
 
 Tools like Scratch [@payne2019music] adopt a self-contained to audio and graphical asset creation and provide a library of prebuilt assets and tools within the environment thus reducing possibility for errors and complexity caused by the compatibility of file formats, migration and management of external asset files. While the code playground Glitch provided some tools to help manage files, it could not create or edit audio or graphical files, requiring the use of external asset creation tools.
 
-In line with existing research, in P1 I observed participant showing a high motivation to incorporate assets based on their hope interests. Responding to the enthusiasm of participants in asset creation, I had introduced six software tools to participants including tools for pixel art, sound editing, sound creation, In addition I also encouraged collage creation to create a physical background to the game and then scan that to create a digital image. A table of the different tools and processes is included as appendix 4.x  
-
-I was concerned that in P1 the diversity of asset creation tools approaches was over complicated creating an increased burden of learning different software, reducing the shared experience helpful for peer learning and risking distracting time and attention from coding activities. Thus, in P2 I reduced the number of suggested assets creating tools suggesting Piskel and an online audio effects generator (bxfr ?)
-
-Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code.  
-
 The forced choice to use a distributed toolset rather than black-boxing asset management and migration led to benefits in developing key digital literacy needed for web creation. The strong motivation to see your assets in the game drove participants to building fluency (aligned with Webmaker ethos) as undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation.  
 
 OPERATIONS - WHERE
 THIS IS THE PLACE - MOVE OTHER MENTIONS HERE IF POSSIBLE
-
-<!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
-
 
 MOVE?
 Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
@@ -350,6 +340,15 @@ _Seeding narrative and art creativity_
 As they had been guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
 
 ![](./Pictures/whale_1.png){width=50%}
+
+<!-- In line with existing research, in P1 I observed participant showing a high motivation to incorporate assets based on their hope interests. Responding to the enthusiasm of participants in asset creation, I had introduced six software tools to participants including tools for pixel art, sound editing, sound creation, In addition I also encouraged collage creation to create a physical background to the game and then scan that to create a digital image. A table of the different tools and processes is included as appendix 4.x   -->
+
+<!-- I was concerned that in P1 the diversity of asset creation tools approaches was over complicated creating an increased burden of learning different software, reducing the shared experience helpful for peer learning and risking distracting time and attention from coding activities. Thus, in P2 I reduced the number of suggested assets creating tools suggesting Piskel and an online audio effects generator (bxfr ?) -->
+
+<!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
+
+
+
 
 
 #### Resolution of C1 / LINK
